ready to fly